# AI-Employee

./: .env.example  .gitignore  AGENTS.md  AGENT_COORDINATION.md  APPROVAL_ORCHESTRATOR_GUIDE.md  BACKEND_INTEGRATION_SUMMARY.md  BUG_FIXES_SUMMARY.md  CLAUDE.md  EMAIL_DRAFTER_SUMMARY.md  FINAL_FIX_SUMMARY.md  FRONTEND_FIX.md  GEMINI.md  GOLD_TIER_IMPLEMENTATION_STATUS.md  GOLD_TIER_MCP_SERVERS_COMPLETE.md  GOLD_TIER_PHASE1_FINAL_REPORT.md  GOLD_TIER_PHASE1_TEST_REPORT.md  GOLD_TIER_README.md  GOLD_TIER_TEST_REPORT.md  LINKEDIN_WATCHER_GUIDE.md  ODOO_INTEGRATION_TEST_REPORT.md  QUICK_FIXES.md  QUICK_START.md  QWEN.md  README.md  README_RALPH.md  RUNNING_STATUS.md  SCHEDULING_GUIDE.md  SILVER_TIER_AUDIT_REPORT.md  SKILLS_SUMMARY.md  SOCIAL_MEDIA_TEST_GUIDE.md  SOCIAL_POST_GENERATOR_SUMMARY.md  START_ALL_GUIDE.md  START_BRAIN_CLOUD.bat  START_BRAIN_LOCAL.bat  STATUS_COMPLETE.md  STATUS_READY.md  SYSTEM_STATUS.md  TESTING_GUIDE.md  WATCHER_MANAGEMENT_SYSTEM.md  WATCHER_QUICK_START.md  (+74 more)
.claude/: settings.local.json
AI-Employee-Vault/: .gmail_processed.json  .processed_files.json  Company_Handbook.md  Dashboard.md
D:\Gemini_Cli\hackathon\hackathon_0\AI-Employee\AI-Employee-Vault/: .ralph_loop_state.json
alembic/: env.py
backend/: .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  Dockerfile  README.md  __init__.py  ai_router.py  config.py  docker-compose.yml  (+6 more)
backend-python/: .env.example  alembic.ini  requirements.txt  test_activity.py  test_files_debug.py  test_list_debug.py  test_logs_debug.py  test_sort_debug.py  test_vault.py
(+3257 files in other folders)
